added tags and organised router in BE
